@@ -42,6 +42,7 @@
       "runtime" : {
          "requires" : {
             "Acme::MetaSyntactic" : "1",
+            "Acme::MetaSyntactic::MultiList" : "1",
             "perl" : "5.006",
             "strict" : "0",
             "warnings" : "0"
@@ -54,7 +55,7 @@
          "url" : "git://github.com/Abigail/Acme-MetaSyntactic-Themes-Abigail.git"
       }
    },
-   "version" : "2012052102",
+   "version" : "2012052201",
    "x_test_requires" : {
       "Test::MetaSyntactic" : 1,
       "Test::More" : 0.88,
